2000-04-26  Tristan Tarrant  <tarrant_tristan@emc.com>

	* exult.cc: Implement 'h' key to show a simple help page
	* .cvsignore: added cvsignore files everywhere
	* ChangeLog: started changelog using standard GNU notation. Emacs 
	has a major mode which enables easy editing of this beast.
	* autogen.sh: script which generates automake/autoconf stuff.
	* configure.in: should not use acinclude.m4 as AC_INIT. Use exult.cc 
	instead.
	
	
